--- a/exercise-2/styles.css
+++ b/exercise-2/styles.css
@@ -7,3 +7,56 @@ body {
 * {
   box-sizing: border-box;
 }
+
+.wrapper{
+  display:grid;
+  
+  padding: 20px;
+  grid-gap:3em;
+  
+
+
+  
+}
+
+
+.wrapper > div{
+  background: #eee;
+  
+
+}
+
+.grid {
+  display: grid;
+  grid-template-columns:1fr 1fr 1fr;
+  grid-auto-rows:minmax(300px, auto);
+  grid-gap: 1em;
+  background-color: #F0F0F0;
+  padding: 20px;
+  
+
+}
+
+.box {
+  display: grid;
+  grid-template-columns: 1fr 1fr ;
+  grid-gap:1em;
+  background-color: #FFFFFF;
+ 
+}
+
+box1-wrapper {
+  display: grid;
+  grid-template-areas: "photo box1-headers";
+  grid-gap: 1em;
+
+}
+
+
+img {
+  width: 50%;
+}
+
+
+  
+
