--- a/exercise-4/styles.css
+++ b/exercise-4/styles.css
@@ -93,18 +93,19 @@ body {
 }
 
 figure {
-  max-height: 28em;
+  height: 28em;
   margin-bottom: 0;
   margin-left: -10em;
   margin-right: -10em;
   margin-top: 0;
   overflow: hidden;
+ 
 }
 
 figure img {
-  max-width: 100%;
+  width: 100%;
   object-fit: cover;
-  object-position: center center;
+  object-position: center;
 }
 
 article {
@@ -118,7 +119,7 @@ article {
 article h1 {
   background-color: white;
   font-family: "Domaine Display";
-  font-size: 3.5rem;
+  font-size: 3.0rem;
   font-style: italic;
   font-weight: 700;
   margin-bottom: 1em;
